curl-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: curl-deploy
    cluster: test1
  name: curl-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: curl-deploy
  template:
    metadata:
      labels:
        app: curl-deploy
        tier: debug
    spec:
      serviceAccountName: babajan
      containers:
      - image: curlimages/curl
        name: curl
        command: ["sleep","1d"]
