httpd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cluster: test1
    app: httpd
  name: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        tier: debug
      name: babajan
    spec:
      containers:
      - image: httpd:alpine
        name: httpd
        volumeMounts:
        - name: data-vol
          mountPath: /usr/local/apache2/htdocs/
          subPath: httpd-data
      volumes:
      - name: data-vol
        persistentVolumeClaim:
          claimName: local-pvc
---


apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  labels:
    app: httpd
    tier: debug
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
