mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:    
        - containerPort: 3306
        volumeMounts: 
        - name: data-vol
          mountPath: /var/lib/mysql
          subPath: mysql-data
      volumes:  
      - name: data-vol
        persistentVolumeClaim:
          claimName: cs2-local-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
    tier: debug
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30055
