nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cluster: test1
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tier: debug
      name: trikojan
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        volumeMounts:
        - name: data-vol
          mountPath:  /usr/share/nginx/html/
          subPath: nginx-data
          # /usr/share/nginx/html/
          # /etc/nginx/conf.d/
      volumes:
      - name: data-vol
        persistentVolumeClaim:
          claimName: local-pvc
---


apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx
    tier: debug
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30088
