postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
    cluster: test1 
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: debug
    spec:
      containers:
      - image: postgres:alpine
        name: postgres
        volumeMounts:
        - name: data-vol
          mountPath: /var/lib/postgresql/data
          subPath: postgres-data
      volumes:
      - name: data-vol
        persistentVolumeClaim:
          claimName: local-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
    tier: debug
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30032
